Fixed spacing

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -53,13 +53,13 @@ nav a {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  flex-grow: 1;
+  gap: 2rem;
   padding: 1rem 1.5rem;
 }
 
 .greetings {
-  line-height: 2rem;
+  text-align: center;
+  margin-top: 2rem;
 }
 
 .text-secondary {
